--- a/ClientApp/src/app/fppg/fppg.component.html
+++ b/ClientApp/src/app/fppg/fppg.component.html
@@ -19,7 +19,7 @@
       </div>
       <div class="col-3">
         <span class="label label-default">Situs State</span>
-        <select class="form-control" formControlName="FCfppgSitusState">
+        <select class="form-control" formControlName="FCfppgSitusState" [value]="lookupValue">
           <!-- <option value="0" selected="selected">{{ lookupValue }}</option> -->
           <option *ngFor="let lookUpDataSitusState of lookUpDataSitusStates">
             {{lookUpDataSitusState.state}}</option>
