--- a/ClientApp/src/app/voluntary-ci/voluntary-ci.component.html
+++ b/ClientApp/src/app/voluntary-ci/voluntary-ci.component.html
@@ -29,7 +29,7 @@
         </div> -->
       </div>
       <div class="mt-4">
-        <button class="btn btn-primary" type="submit">Reset Form </button>
+        <button class="btn btn-primary" (click) = "volcireset()" type="submit">Reset Form </button>
       </div>
     </div>
 
