--- a/ClientApp/src/app/accident/accident.component.html
+++ b/ClientApp/src/app/accident/accident.component.html
@@ -24,7 +24,7 @@
         </select>
       </div>              
       <div class="mt-4">
-        <button class="btn btn-primary" type="submit">Reset Form </button>
+        <button class="btn btn-primary" (click)= "resetAcc()"type="submit">Reset Form </button>
       </div>
     </div>
     <div class="row pb-2 " style="justify-content:space-evenly;">
