--- a/ClientApp/src/app/employer-paid-ci/employer-paid-ci.component.html
+++ b/ClientApp/src/app/employer-paid-ci/employer-paid-ci.component.html
@@ -27,7 +27,7 @@
 
     </div>
     <div class="mt-4">
-      <button class="btn btn-primary" type="submit">Reset Form </button>
+      <button class="btn btn-primary" (click) = "resetEmpCi()"type="submit">Reset Form </button>
     </div>
   </div>
 
