--- a/ClientApp/src/app/employer-paid-ci/employer-paid-ci.component.html
+++ b/ClientApp/src/app/employer-paid-ci/employer-paid-ci.component.html
@@ -1,5 +1,5 @@
 
-<div class="container" style="width: 100%;">
+<div class="container" style="width: 100%;" *ngIf="empCiData !== undefined">
   <form [formGroup]="empCIformgrp">
   <div class="row" style="justify-content:space-evenly;margin-right: 7%;"> 
     <div class="radio-button">
@@ -8,8 +8,8 @@
     </div>
     <div class="col-3">
       <span class="label label-default">EMP Paid CI Effective Date</span>
-      <input type="date" [value]="latest_dateemppaisci" [min]="minDate" class="form-control mb-2 " style="width: 100%;"
-      formControlName="FCempCIEffectiveDate" [(ngModel)]="latest_dateemppaisci" placeholder="Group Effective Date">
+      <input type="date" class="form-control mb-2 " style="width: 100%;"
+      formControlName="FCempCIEffectiveDate" placeholder="Group Effective Date">
 
     </div>
     <div class="radio-button">
@@ -18,9 +18,9 @@
     </div>
     <div class="col-3">
       <span class="label label-default">Situs State</span>
-      <select class="form-control" [value]="lookupValue" formControlName="FCempCISitusState">
+      <select class="form-control" formControlName="FCempCISitusState">
         <!-- <option value="0" selected="selected">{{ lookupValue }}</option> -->
-        <option *ngFor="let lookUpDataSitusState of lookUpDataSitusStates">
+        <option *ngFor="let lookUpDataSitusState of lookUpDataSitusStates"  value={{lookUpDataSitusState.state}}>
           {{lookUpDataSitusState.state}}</option>
 
       </select>
